# airtable-sync

./: .gitignore  Cargo.toml  README.md  build  config.example.toml
.cargo/: config.toml
crates/: README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  lib.rs
crates/core/src/airtable/: bridge.rs  list_fields.rs  list_tables.rs  mod.rs  pull_schema.rs  runtime.rs  test.rs
crates/core/src/commands/: airtable.rs  compare.rs  config.rs  csv.rs  db.rs  group.rs  list.rs  mapping.rs  mod.rs  report.rs  spec.rs  sync.rs  tables.rs  version.rs
crates/core/src/compare/: all.rs  csv_index.rs  diff.rs  engine.rs  mod.rs  table.rs  value.rs
crates/core/src/config/: init.rs  mod.rs  show.rs  validate.rs
crates/core/src/csv/: common.rs  headers.rs  import_headers.rs  mod.rs  preview.rs  preview_reader.rs  validate.rs  validate_reader.rs
crates/core/src/db/: change_plan_store.rs  common.rs  init.rs  migrate.rs  mod.rs  reset.rs  schema.rs
crates/core/src/db/csv_store/: access.rs  mod.rs  store.rs
crates/core/src/db/schema_store/: access.rs  mod.rs  store.rs
crates/core/src/gui/: dispatch.rs  mod.rs
crates/core/src/mapping/: disable.rs  enable.rs  list.rs  mod.rs  remove.rs  report.rs  resolve.rs  set.rs
crates/core/src/report/: changes.rs  mod.rs  summary.rs  validation.rs
crates/core/src/sync/: apply.rs  approve.rs  deny.rs  dry_run.rs  mod.rs  plan.rs  plan_context.rs  review.rs
crates/core/tests/: airtable_list_fields.rs  airtable_list_tables.rs  airtable_pull_schema.rs  airtable_test.rs  cli_help.rs  compare_all.rs  compare_table.rs  config_init.rs  config_show.rs  config_validate.rs  csv_import_headers.rs  csv_preview.rs  csv_validate.rs  db_init.rs  db_migrate.rs  db_reset.rs  db_schema.rs  gui_dispatch.rs  mapping_disable.rs  mapping_enable.rs  mapping_list.rs  mapping_remove.rs  mapping_report.rs  mapping_set.rs  report_changes.rs  report_summary.rs  report_validation.rs  sync_apply.rs  sync_dry_run.rs  sync_review.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  main.rs  view.rs
docs/: architecture.md
docs/plan/: milestone-1-cli-help.md
schema/: airtable-sync.sql
schema/migrations/: 002_change_plans.sql
