[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
nest-airtable = { git = "https://github.com/pacificnm/nest.git", branch = "main" }
nest-cli = { git = "https://github.com/pacificnm/nest.git", branch = "main" }
nest-config = { git = "https://github.com/pacificnm/nest.git", branch = "main" }
nest-core = { git = "https://github.com/pacificnm/nest.git", branch = "main" }
nest-error = { git = "https://github.com/pacificnm/nest.git", branch = "main" }
nest-http-client = { git = "https://github.com/pacificnm/nest.git", branch = "main" }
nest-logging = { git = "https://github.com/pacificnm/nest.git", branch = "main" }
