[package]
name = "airtable-sync-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/pacificnm/airtable-sync"
description = "Shared Airtable Sync application logic for CLI and GUI hosts"

[dependencies]
clap = { workspace = true }
nest-airtable = { workspace = true }
nest-cli = { workspace = true }
nest-config = { workspace = true }
nest-core = { workspace = true }
nest-error = { workspace = true }
nest-http-client = { workspace = true }
nest-task-runtime = { workspace = true }
nest-validation = { workspace = true }
nest-data = { workspace = true }
nest-data-sqlite = { workspace = true }
nest-file = { workspace = true }
nest-file-csv = { workspace = true }
csv = "1.3"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
nest-cli = { workspace = true }
nest-error = { workspace = true }
rusqlite = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
wiremock = "0.6"
